[tool.poetry]
name = "my-meal-planner-agent"
version = "0.1.0"
description = "Chef agent who works for me"
authors = ["manisha gandhi"]
readme = "README.md"
packages = [
    { include = "main", from = "myagent" }
]
[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.14"
langgraph = "^0.2.64"
langchain-openai = "^0.3.1"
twilio = "^9.4.3"
google-api-python-client = "^2.159.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
langgraph-cli = {extras = ["inmem"], version = "^0.1.67"}
langgraph-checkpoint-sqlite = "^2.0.3"
langgraph-sdk = "^0.1.51"
google-auth = "^2.37.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
